# decent_logs

./: .bumbversion.cfg  .bumpversion.cfg  MANIFEST.in  Makefile  project.pp1.yaml  pyproject.toml  requirements.txt  setup.json  setup.py  shippable.yml
.circleci/: config.yml  decent_logs_tests.tests
src/decent_logs/: __init__.py  log_record.py  withinternallog.py
src/decent_logs_tests/: test0.py
