[project]
name = "DecentLogs-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "info@zupermind.com"}]
dependencies = [
    "zuper-commons-z7",
    ]

[tool]
[tool.poetry]
name = "DecentLogs-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <info@zupermind.com>"]
packages = [
    {from = "src", include = "decent_logs"},
    ]

[tool.setuptools]
packages = [
    "decent_logs",
    ]
package-dir = {"" = "src"}
