[project]
name = "DecentLogs-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com"}]
dependencies = [
    "zuper-commons-z7",
    ]

[tool]
[tool.poetry]
name = "DecentLogs-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    {from = "src", include = "decent_logs"},
    ]

[tool.setuptools]
packages = [
    "decent_logs",
    ]
package-dir = {"" = "src"}
